new structure, ore problem still not fixed