@@ -1,15 +1,14 @@
 package net.bambi.orefusion.datagen;
 
 import net.bambi.orefusion.OreFusion;
-import net.bambi.orefusion.world.feature.ModConfiguredFeatures;
-import net.bambi.orefusion.world.feature.ModPlacedFeatures;
+import net.bambi.orefusion.worldgen.ModConfiguredFeatures;
+import net.bambi.orefusion.worldgen.ModPlacedFeatures;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.core.RegistrySetBuilder;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.data.PackOutput;
 import net.minecraftforge.common.data.DatapackBuiltinEntriesProvider;
 
-import java.util.Collections;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
@@ -19,6 +18,6 @@ public class ModWorldGenProvider extends DatapackBuiltinEntriesProvider {
             .add(Registries.PLACED_FEATURE, ModPlacedFeatures::bootstrap);
 
     public ModWorldGenProvider(PackOutput output, CompletableFuture<HolderLookup.Provider> registries) {
-        super(output, registries, BUILDER, Collections.singleton(OreFusion.MOD_ID));
+        super(output, registries, BUILDER, Set.of(OreFusion.MOD_ID));
     }
 }
